package p4ulor.obj.detector.ui.components.utils

object UiTestTag {
    const val bottomAppBar = "bottomAppBar"
    const val achievementsList = "achievementsList"
    const val achievementsGoogleSignIn = "achievementsGoogleSignIn"
    const val settingsMinimumDetectionCertaintySlider = "settingsMinimumDetectionCertaintySlider"
    const val settingsMinimumDetectionCertaintyValue = "settingsMinimumDetectionCertaintyValue"
    const val settingsCheckBox = "settingsCheckBox"
}
