<resources>
    <string name="app_name">Object Detector</string>
    <string name="gemini" translatable="false">Gemini</string>
    <string name="you">You</string>
    <string name="gemini_api">Gemini API</string>
    <string name="enter_api_key">Enter API key</string>
    <string name="save">Save</string>
    <string name="mediapipe">MediaPipe</string>
    <string name="minimum_detection_certainty">Minimum detection certainty:\u00A0</string>
    <string name="maximum_simultaneous_object_detections">Maximum simultaneous object detections:\u00A0</string>
    <string name="detection_animations">Detection animations</string>
...
    <string name="saved_gemini_key">Saved Gemini key</string>
    <string name="model">Model</string>
    <string name="save_pictures">Save pictures</string>
    <string name="note">ℹ️ Note</string>
    <string name="detection_animations_details">Due to limitations, only 1 object type can have its outline animated at one time.</string>
    <string name="your_achievements">Your Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="new_achievement">New Achievement!</string>
    <string name="objects">Object(s)</string>
    <string name="warning">Warning</string>
    <string name="all_achievements_will_be_deleted">All achievements will be deleted, do you wish do continue?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
...
